--- a/LoginPage/Login.html
+++ b/LoginPage/Login.html
@@ -6,16 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <!--Sylesheet-->
-    <link rel="stylesheet" href="./CSS/bootstrap.min.css"> 
+    <link rel="stylesheet" href="./CSS/bootstrap.min.css">
+    <link rel="stylesheet" href="./CSS/LoginCss.css"> 
 </head>
 <body>
     <header></header>
     <main>
         <section>
-            <div class="container mt-5 pt-5">
+            <div class="container mt-5 pt-5" >
                 <div class="row">
-                    <div class="col-12 col-sm-8 col-md-6 m-auto">
-                      <div class="card border-0 shadow">
+                    <div class="col-12 col-sm-8 col-md-6 m-auto my-5">
+                      <div class="card  border-0 shadow m-auto" style="width: 25rem;">
                         <div class="card-body">
                             </svg>  
                           <form action="">
