--- a/HomePage/Home.html
+++ b/HomePage/Home.html
@@ -17,7 +17,11 @@
         <div class="cotainer-fluid p-0">
           <nav class="navbar navbar-expand-lg navbar-dark shadow-5-strong">
               <div class="container-fluid">
-                <a class="navbar-brand" href="#">Phonix Air</a>
+                <a class="navbar-brand" href="#">
+                  <div class="logo">
+                    <img src="./Img/Phoenix Airline PVT_free-file 1.png" alt="logo">
+                  </div>
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
@@ -25,7 +29,7 @@
                   <div class="ms-auto"></div>
                   <div class="navbar-nav">
                     
-                    <a class="nav-link active" aria-current="page" href="Home.html">Home</a>
+                    <a class="nav-link" aria-current="page" href="Home.html">Home</a>
                     <a class="nav-link" href="Disabled">Book a Flight</a>
                     <a class="nav-link" href="Disabled">Flight Status</a>
                     <a class="nav-link" href="Disabled">Sign Up</a>
