--- a/HomePage/Home.html
+++ b/HomePage/Home.html
@@ -14,6 +14,7 @@
   </head>
   <body>
       <header>
+        <div class="section custom-navbar">
         <div class="cotainer-fluid p-0">
           <nav class="navbar navbar-expand-lg navbar-dark shadow-5-strong">
               <div class="container-fluid">
@@ -39,6 +40,7 @@
               </div>
             </nav>
       </div>
+    </div>
 
       </header>
       <main>
