--- a/HomePage/Home.html
+++ b/HomePage/Home.html
@@ -17,7 +17,11 @@
         <!--Navigation Bar-->
         <div class="nav1">
           <nav class="navbar navbar-expand-sm navbar-dark">
-            <a href="#" class="navbar-brand">Phonix Air</a>
+            <a href="#" class="navbar-brand"> 
+              <img src="./Img/Phoenix Airline PVT_free-file 1.png" alt="logoo"  width="115px" height="60px"
+              />
+              <span class="hidden">
+               Phonix Air</span></a>
             <button
             class="navbar-toggler"
             type="button"
@@ -30,7 +34,7 @@
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="toggleMobileMenu">
-              <ul class="navbar-nav">
+              <ul class="navbar-nav ms-auto text-center">
                 <li>
                   <a class="nav-link" href="#">Home</a>
                 </li>
@@ -41,7 +45,7 @@
                   <a class="nav-link" href="#">Flight Stetus</a>
                 </li>
                 <li>
-                  <a class="nav-link" href="#">Home</a>
+                  <a class="nav-link" href="#">Sign Up</a>
                 </li>
                 
               </ul>
