--- a/AdminLogin/adminlog.html
+++ b/AdminLogin/adminlog.html
@@ -9,8 +9,20 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css">
 </head>
 <body>
-    <script>
+    <header></header>
+    <main>
+        <div class="logoo">
+            <img src="./img/Phoenix Airline PVT_free-file 1-min (1).png" alt="logoo"  width="156px" height="75px"
+            />
+        </div>
+        <div class="form">
+            <div class="rectangle">
 
-    </script>
+            </div>
+        </div>
+    </main>
+    <footer></footer>
+    <script src="./Js/bootstrap.bundle.min.js"></script>
+    <script src="./Js/jqeuery.min.js"></script>
 </body>
 </html>
