--- a/AdminLogin/adminlog.html
+++ b/AdminLogin/adminlog.html
@@ -12,11 +12,16 @@
     <header></header>
     <main>
         <div class="logoo">
-            <img src="./img/Phoenix Airline PVT_free-file 1-min (1).png" alt="logoo"  width="156px" height="75px"
+            <img src="./img/Phoenix Airline PVT_free-file 1-min (1).png" class="img-fluid" alt="logoo"  width="156px" height="75px"
             />
         </div>
         <div class="form">
             <div class="rectangle">
+                <div class="formrtext">
+                    <h3>
+                        Admin Log in
+                    </h3>
+                </div>
 
             </div>
         </div>
