--- a/AdminLogin/adminlog.html
+++ b/AdminLogin/adminlog.html
@@ -21,6 +21,15 @@
                     <h3>
                         Admin Log in
                     </h3>
+                    <form action="">
+                        <input type="text" name="" id="" class="form-control my-4 py-2" placeholder="Username">
+                        <input type="text" name="" id="" class="form-control my-4 py-2" placeholder="Password">
+                        <div class="text-center nt-3 ">
+                            <button class="btn btn-primary">Login</button>
+                            <h6><br>Forgot your password ?</h6>
+                            <a href="#" class="nav-link">Reset Password</a>
+                        </div>
+                      </form>
                 </div>
 
             </div>
