--- a/AdminLogin/adminlog.html
+++ b/AdminLogin/adminlog.html
@@ -11,7 +11,7 @@
 <body>
     <header></header>
     <main>
-        <div class="logoo">
+        <div class="square square-lg">
             <img src="./img/Phoenix Airline PVT_free-file 1-min (1).png" class="img-fluid" alt="logoo"  width="156px" height="75px"
             />
         </div>
@@ -34,6 +34,7 @@
 
             </div>
         </div>
+        <div class="square rounded p-5 bg-secondary">...</div>
     </main>
     <footer></footer>
     <script src="./Js/bootstrap.bundle.min.js"></script>
