--- a/StaffLogin/Staff-Login.html
+++ b/StaffLogin/Staff-Login.html
@@ -19,7 +19,7 @@
             <div class="rectangle">
                 <div class="formrtext">
                     <h3>
-                        Admin Log in
+                        Staff Login
                     </h3>
                     <form action="">
                         <input type="text" name="" id="" class="form-control my-4 py-2" placeholder="Username">
