--- a/LoginPage/Login.html
+++ b/LoginPage/Login.html
@@ -15,8 +15,7 @@
         <section>
             <div class="container mt-5 pt-5" >
                 <div class="row">
-                    <div class="col-12 col-sm-8 col-md-6 m-auto my-5">
-                      <div class="card  border-0 shadow m-auto" style="width: 25rem;">
+                      <div class="card  border-0 shadow m-auto">
                         <div class="card-body">
                             </svg>  
                           <form action="">
