--- a/LoginPage/Login.html
+++ b/LoginPage/Login.html
@@ -4,42 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <!--Sylesheet-->
-    <link rel="stylesheet" href="./CSS/bootstrap.min.css">
-    <link rel="stylesheet" href="./CSS/LoginCss.css"> 
+    <title>Admin Login</title>
+    <link rel="stylesheet" href="./css/LoginCss.css">
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
 </head>
 <body>
     <header></header>
     <main>
-        <section>
-            <div class="container mt-5 pt-5" >
-                <div class="row">
-                      <div class="card  border-0 shadow m-auto">
-                        <div class="card-body">
-                            </svg>  
-                          <form action="">
-                            <input type="text" name="" id="" class="form-control my-4 py-2" placeholder="Username">
-                            <input type="text" name="" id="" class="form-control my-4 py-2" placeholder="Password">
-                            <div class="text-center nt-3 ">
-                                <button class="btn btn-primary">Login</button>
-                                <h6><br>Don't have an account ?</h6>
-                                <a href="#" class="nav-link">Register Here !</a>
-                            </div>
-                          </form>
+        <div class="square square-lg">
+            <img src="./img/Phoenix Airline PVT_free-file 1-min (1).png" class="img-fluid" alt="logoo"  width="156px" height="75px"
+            />
+        </div>
+        <div class="form">
+            <div class="rectangle">
+                <div class="formrtext">
+                    <h3>
+                        Staff Login
+                    </h3>
+                    <form action="">
+                        <input type="text" name="" id="" class="form-control my-4 py-2" placeholder="Username">
+                        <input type="text" name="" id="" class="form-control my-4 py-2" placeholder="Password">
+                        <div class="text-center nt-3 ">
+                            <button class="btn btn-primary">Login</button>
+                            <h6><br>Forgot your password ?</h6>
+                            <a href="#" class="nav-link">Reset Password</a>
                         </div>
-                      </div>  
-                    </div>
+                      </form>
                 </div>
+
             </div>
-        </section>
+        </div>
+        
     </main>
     <footer></footer>
-
-    <!--Scrpit-->
-    <script src="./JS/bootstrap.bundle.min.js"></script>
-    <script src="./JS/jqeuery.min.js"></script>
-    <script src="./JS/app.js"></script>
-    
+    <script src="./Js/bootstrap.bundle.min.js"></script>
+    <script src="./Js/jqeuery.min.js"></script>
 </body>
 </html>
