--- a/Staff-reg/Staff-reg.html
+++ b/Staff-reg/Staff-reg.html
@@ -48,10 +48,15 @@
                         <input type="text" id="form3Example9" class="form-control form-control-lg" />
                         <label class="form-label" for="form3Example9">Email</label>
                       </div>
+
+                      <div class="form-outline mb-4">
+                        <input type="text" id="form3Example90" class="form-control form-control-lg" />
+                        <label class="form-label" for="form3Example90">Employee ID</label>
+                      </div>
       
                       <div class="form-outline mb-4">
                         <input type="text" id="form3Example90" class="form-control form-control-lg" />
-                        <label class="form-label" for="form3Example90">ID Number</label>
+                        <label class="form-label" for="form3Example90">Grade</label>
                       </div>
       
                       <div class="form-outline mb-4">
