--- a/Admin-Dashbord/AdminDash.html
+++ b/Admin-Dashbord/AdminDash.html
@@ -9,9 +9,18 @@
     <link rel="stylesheet" href="./Css/admindstyle.css">
 </head>
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    
+    <!--SideBar-->
+    <div class="sidebar">
+        <a class="active" href="#Tickets">Tickets</a>
+        <a href="#Requets">Requets</a>
+        <a href="#Clients">Clients</a>
+        <a href="#Staff-Members">Staff Members</a>
+        <a href="#Flight-Details">Flight Details</a>
+
+    </div>
+
+
     <script src="./js/bootstrap.bundle.min.js"></script>
     <script src="./js/jqeuery.min.js"></script>
 </body>
