--- a/Admin-Dashbord/AdminDash.html
+++ b/Admin-Dashbord/AdminDash.html
@@ -12,6 +12,7 @@
     
     <!--SideBar-->
     <div class="sidebar">
+        <div class="logoo"><img src="./img/Phoenix Airline PVT_free-file 1-min (1).png"></div>
         <a class="active" href="#Tickets">Tickets</a>
         <a href="#Requets">Requets</a>
         <a href="#Clients">Clients</a>
