--- a/AdminLogin/adminlog.html
+++ b/AdminLogin/adminlog.html
@@ -9,35 +9,35 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css">
 </head>
 <body>
-    <header></header>
-    <main>
-        <div class="square square-lg">
-            <img src="./img/Phoenix Airline PVT_free-file 1-min (1).png" class="img-fluid" alt="logoo"  width="156px" height="75px"
-            />
-        </div>
-        <div class="form">
-            <div class="rectangle">
-                <div class="formrtext">
-                    <h3>
-                        Admin Log in
-                    </h3>
-                    <form action="">
-                        <input type="text" name="" id="" class="form-control my-4 py-2" placeholder="Username">
-                        <input type="text" name="" id="" class="form-control my-4 py-2" placeholder="Password">
-                        <div class="text-center nt-3 ">
-                            <button class="btn btn-primary">Login</button>
-                            <h6><br>Forgot your password ?</h6>
-                            <a href="#" class="nav-link">Reset Password</a>
-                        </div>
-                      </form>
-                </div>
-
-            </div>
-        </div>
+    <div class="custom-logo">
+        <img src="./img/Phoenix Airline PVT_free-file 1-min (1).png" class="img-fluid" alt="logoo"  width="156px" height="75px"
+        />
+    </div>
+    <div class="background center flex">
         
-    </main>
-    <footer></footer>
+        <div>
+            <h3 class="custom-header">
+                Admin Log in
+            </h3>
+            <p class="caption">Enter your credentials to access your account.</p>    
+        </div>
+        <form action="">
+            <input type="text" name="" id="" class="form-control my-4 py-2 custom-input" placeholder="Username">
+            <input type="text" name="" id="" class="form-control my-4 py-2 custom-input" placeholder="Password">
+            <div class="text-center nt-3 ">
+                <button class="btn-custom">Login</button>
+                <div class="caption-2">
+                    <p class="para">Forgot your password ? </p>
+                    <a href="#" class="reset-pw"> Reset Password</a>
+                </div>
+            </div>
+        </form>    
+    </div>
+    
     <script src="./Js/bootstrap.bundle.min.js"></script>
     <script src="./Js/jqeuery.min.js"></script>
 </body>
 </html>
+
+
+ 
