--- a/AdminLogin/adminlog.html
+++ b/AdminLogin/adminlog.html
@@ -1,43 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin Login</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/bootstrap.min.css" />
+  </head>
+  <body>
     <div class="custom-logo">
-        <img src="./img/Phoenix Airline PVT_free-file 1-min (1).png" class="img-fluid" alt="logoo"  width="156px" height="75px"
-        />
+      <img
+        src="./img/Phoenix Airline PVT_free-file 1-min (1).png"
+        class="img-fluid"
+        alt="logoo"
+        width="156px"
+        height="75px"
+      />
     </div>
     <div class="background center flex">
-        
-        <div>
-            <h3 class="custom-header">
-                Admin Log in
-            </h3>
-            <p class="caption">Enter your credentials to access your account.</p>    
+      <div>
+        <h3 class="custom-header">Admin Log in</h3>
+        <p class="caption">Enter your credentials to access your account.</p>
+      </div>
+      <form action="">
+        <input
+          type="text"
+          name=""
+          id=""
+          class="form-control my-4 py-2 custom-input shadow-none"
+          placeholder="Username"
+        />
+        <input
+          type="text"
+          name=""
+          id=""
+          class="form-control my-4 py-2 custom-input shadow-none"
+          placeholder="Password"
+        />
+        <div class="text-center nt-3">
+          <input type="submit" class="btn-custom" value="Login" />
+          <div class="caption-2">
+            <p class="para">Forgot your password ?</p>
+            <a href="#" class="reset-pw"> Reset Password</a>
+          </div>
         </div>
-        <form action="">
-            <input type="text" name="" id="" class="form-control my-4 py-2 custom-input" placeholder="Username">
-            <input type="text" name="" id="" class="form-control my-4 py-2 custom-input" placeholder="Password">
-            <div class="text-center nt-3 ">
-                <button class="btn-custom">Login</button>
-                <div class="caption-2">
-                    <p class="para">Forgot your password ? </p>
-                    <a href="#" class="reset-pw"> Reset Password</a>
-                </div>
-            </div>
-        </form>    
+      </form>
     </div>
-    
+
     <script src="./Js/bootstrap.bundle.min.js"></script>
     <script src="./Js/jqeuery.min.js"></script>
-</body>
+  </body>
 </html>
-
-
- 
