--- a/StaffLogin/Staff-Login.html
+++ b/StaffLogin/Staff-Login.html
@@ -1,43 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Login</title>
-    <link rel="stylesheet" href="./css/stflog.css">
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
-</head>
-<body>
-    <header></header>
-    <main>
-        <div class="square square-lg">
-            <img src="./img/Phoenix Airline PVT_free-file 1-min (1).png" class="img-fluid" alt="logoo"  width="156px" height="75px"
-            />
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Staff</title>
+    <link rel="stylesheet" href="./css/stflog.css" />
+    <link rel="stylesheet" href="./css/bootstrap.min.css" />
+  </head>
+  <body>
+    <div class="custom-logo">
+      <img
+        src="./img/Phoenix Airline PVT_free-file 1-min (1).png"
+        class="img-fluid"
+        alt="logoo"
+        width="156px"
+        height="75px"
+      />
+    </div>
+    <div class="background center flex">
+      <div>
+        <h3 class="custom-header">Staff Log In</h3>
+        <p class="caption">Enter your credentials to access your account.</p>
+      </div>
+      <form action="">
+        <input
+          type="text"
+          name=""
+          id=""
+          class="form-control my-4 py-2 custom-input shadow-none"
+          placeholder="Username"
+        />
+        <input
+          type="text"
+          name=""
+          id=""
+          class="form-control my-4 py-2 custom-input shadow-none"
+          placeholder="Password"
+        />
+        <div class="text-center nt-3">
+          <input type="submit" class="btn-custom" value="Login" />
+          <div class="caption-2">
+            <p class="para">Forgot your password ?</p>
+            <a href="#" class="reset-pw"> Reset Password</a>
+          </div>
         </div>
-        <div class="form">
-            <div class="rectangle">
-                <div class="formrtext">
-                    <h3>
-                        Staff Login
-                    </h3>
-                    <form action="">
-                        <input type="text" name="" id="" class="form-control my-4 py-2" placeholder="Username">
-                        <input type="text" name="" id="" class="form-control my-4 py-2" placeholder="Password">
-                        <div class="text-center nt-3 ">
-                            <button class="btn btn-primary">Login</button>
-                            <h6><br>Forgot your password ?</h6>
-                            <a href="#" class="nav-link">Reset Password</a>
-                        </div>
-                      </form>
-                </div>
+      </form>
+    </div>
 
-            </div>
-        </div>
-        
-    </main>
-    <footer></footer>
     <script src="./Js/bootstrap.bundle.min.js"></script>
     <script src="./Js/jqeuery.min.js"></script>
-</body>
+  </body>
 </html>
