--- a/Client-reg/client-reg.html
+++ b/Client-reg/client-reg.html
@@ -17,6 +17,9 @@
         <img src="./img/Left Side-min.jpg" alt="Image">
       </div>
       <form>
+        <div class="logoo">
+          <img src="./img/Phoenix Airline PVT_free-file 1-min (1).png">
+        </div>
         <h3>Registation Form</h3>
         <div class="form-group">
           <input type="text" placeholder="Name" class="form-control">
