--- a/StaffLogin/Staff-Login.html
+++ b/StaffLogin/Staff-Login.html
@@ -32,7 +32,7 @@
           placeholder="Username"
         />
         <input
-          type="text"
+          type="password"
           name=""
           id=""
           class="form-control my-4 py-2 custom-input shadow-none"
