--- a/HomePage/Home.html
+++ b/HomePage/Home.html
@@ -36,10 +36,10 @@
             <div class="collapse navbar-collapse" id="toggleMobileMenu">
               <ul class="navbar-nav ms-auto text-center">
                 <li>
-                  <a class="nav-link" href="#">Home</a>
+                  <a class="nav-link" href="./Home.html">Home</a>
                 </li>
                 <li>
-                  <a class="nav-link" href="#">Book A Flight</a>
+                  <a class="nav-link" href="../bookaFlight/Page2.html">Book A Flight</a>
                 </li>
                 <li>
                   <a class="nav-link" href="#">Flight Stetus</a>
