Flight booking Page updates

--- a/bookaFlight/Page2.html
+++ b/bookaFlight/Page2.html
@@ -56,6 +56,9 @@
       <main>
         <!--FORM-->
       <div class="booking-form-box">
+        <div class="headtitile">
+        <header>Hi,Whare do you like to go ?</header>
+      </div>
   
       
        <div class="booking-form">
