--- a/Client-reg/client-reg.html
+++ b/Client-reg/client-reg.html
@@ -1,49 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Registation</title>
-    <link rel="stylesheet" href="./css/CR.css">
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
-</head>
-<body>
-
-
-  <div class="wrapper">
-    <div class="inner">
-      <div class="img-holder">
-        <img src="./img/Left Side-min.jpg" alt="Image">
+    <link rel="stylesheet" href="./css/CR.css" />
+    <link rel="stylesheet" href="./css/bootstrap.min.css" />
+  </head>
+  <body>
+    <div class="flex-container">
+      <div class="hero-section" style="flex-grow: 12">
+        <img
+          class="main-image"
+          src="../Client-reg/img/Left Side-min.jpg"
+          alt="Hero Section"
+        />
       </div>
-      <form>
-        <div class="logoo">
-          <img src="./img/Phoenix Airline PVT_free-file 1-min (1).png">
+      <div class="parent-class">
+        <div class="right-side" style="flex-grow: 3">
+          <div class="logo">
+            <img
+              class="user-logo"
+              src="img/Phoenix Airline PVT_free-file 1-min (1).png"
+              alt="Logo"
+            />
+          </div>
+          <h1 class="header">Create Account</h1>
+          <form class="form" action="">
+            <input type="text" class="name" placeholder="Name" />
+            <input type="email" class="email" placeholder="Email" />
+            <input type="text" class="idnumber" placeholder="ID Number" />
+            <input type="password" class="password" placeholder="Password" />
+            <input
+              type="password"
+              class="password"
+              placeholder="Confirm Password"
+            />
+            <input type="submit" class="submit" value="Create Account" />
+            <p class="link-text">
+              Aleready have an Account <a href="#" class="link">Log In</a>
+            </p>
+          </form>
         </div>
-        <h3>Registation Form</h3>
-        <div class="form-group">
-          <input type="text" placeholder="Name" class="form-control">
-        </div>
-        <div class="form-wrapper">
-          <input type="text" placeholder="Email" class="form-control">
-        </div>
-        <div class="form-wrapper">
-          <input type="number" placeholder="ID Number" class="form-control">
-        </div>
-        <div class="form-wrapper">
-          <input type="password" placeholder="password" class="form-control">
-        </div>
-        <div class="form-wrapper">
-          <input type="password" placeholder="Confirm password" class="form-control">
-        </div>
-        <button>Create Account</button>
-      </form>
+      </div>
     </div>
-  </div>
 
-
-  
     <script src="./js/bootstrap.bundle.min.js"></script>
     <script src="./js/jqeuery.min.js"></script>
-</body>
+  </body>
 </html>
