--- a/bookaFlight/Page2.html
+++ b/bookaFlight/Page2.html
@@ -88,7 +88,7 @@
             </div>
           </div>
         </div>
-        <div class="date flex-center-hr">
+        <div class="date-hold flex-center-hr">
           <div class="depart-date">
             <input
               type="text"
